# ros_sevenbot

./: CMakeLists.txt  README.md  package.xml
arduino_sketch/serial_publisher/: serial_publisher.ino
launch/: arduino_pub.launch  sevenbot.launch
src/: serial_node.cpp  serial_node_parser.py  serial_node_state_monitor.py  serial_node_state_publisher.cpp  sevenbot_state_publisher.cpp
urdf/: sevenbot.urdf
